@@ -37,7 +37,6 @@ SEXP uniqlist();
 SEXP uniqlengths();
 SEXP fastradixdouble();
 SEXP fastradixint();
-// SEXP isSortedList();
 SEXP setrev();
 SEXP forder();
 SEXP fsorted();
@@ -81,7 +80,6 @@ R_CallMethodDef callMethods[] = {
 {"Cuniqlengths", (DL_FUNC) &uniqlengths, -1},
 {"Cfastradixdouble", (DL_FUNC) &fastradixdouble, -1}, 
 {"Cfastradixint", (DL_FUNC) &fastradixint, -1},
-// {"CisSortedList", (DL_FUNC) &isSortedList, -1},
 {"Csetrev", (DL_FUNC) &setrev, -1},
 {"Cforder", (DL_FUNC) &forder, -1},
 {"Cfsorted", (DL_FUNC) &fsorted, -1},
