@@ -375,82 +375,3 @@ void bmerge_r(int xlowIn, int xuppIn, int ilowIn, int iuppIn, int col, int lowma
 }
 
 
-/*
-Deprecated isSortedList.
-Wherever we used this before (e.g. fastorder) we wanted the ordering afterwards anyway if not sorted. These two steps are now done in one in forder.
-This isSortedList wasn't using the new twiddle, either (is still using tolerance).  We need everything consistent going via forder.c
-Timings are secondary, but forder does it column by column which should be faster at detecting unsortedness at the bottom as usually shows up
-in the first column.  If at the top in 2nd column, the 1st column is so fast anyway, that it'll get there quickly.
-
-SEXP isSortedList(SEXP l, SEXP w, SEXP tolerance)
-{
-    R_len_t i,j,nrow,ncol;
-    Rboolean b;
-    SEXP v;
-    unsigned long long *vu;
-    double tol = REAL(tolerance)[0];
-    ncol = length(l);
-    nrow = length(VECTOR_ELT(l,0));
-    for (j=1; j<ncol; j++) if (length(VECTOR_ELT(l,j)) != nrow) error("Column %d is length %d which differs from length of column 1 (%d).", j+1, length(VECTOR_ELT(l,j)), nrow);
-    if (!isInteger(w)) error("vector w of columns to test isn't an integer vector");
-    for (i=1; i<nrow; i++) {
-        b = TRUE;
-        j = -1;
-        while (b && ++j<LENGTH(w)-1) {
-            v=VECTOR_ELT(l,INTEGER(w)[j]-1);
-            switch (TYPEOF(v)) {      // TO DO: change switch to *(EQ[type])(v,i,i-1)
-            case INTSXP : case LGLSXP :
-                b = INTEGER(v)[i]==INTEGER(v)[i-1]; break;      // DONE: NA is INT_MIN (checked above) here, so it just works normally
-            case STRSXP :
-                b = STRING_ELT(v,i)==STRING_ELT(v,i-1); break;  // NA seems to work here as well
-            case REALSXP :
-                vu = (unsigned long long*)REAL(v); // allows equality checking very straightforward (incl. NA, NaN, -Inf and Inf)
-                b = (vu[i] == vu[i-1] || fabs(REAL(v)[i] - REAL(v)[i-1])<tol); break; // DONE: NA, NaN, -Inf and Inf
-            default :
-                error("Type '%s' not supported", type2char(TYPEOF(v))); 
-            }
-        }
-        v = VECTOR_ELT(l,INTEGER(w)[j]-1);
-        switch (TYPEOF(v)) {
-        case INTSXP : case LGLSXP :
-            b = INTEGER(v)[i]<INTEGER(v)[i-1]; break;    // DONE: Check assumption NA largest negative
-        case STRSXP :
-            b = StrCmp(STRING_ELT(v,i), STRING_ELT(v,i-1))<0; break;
-        case REALSXP :
-            vu = (unsigned long long*)REAL(v);
-            b = flip_cmp_double(vu[i], ISNAN(REAL(v)[i])) < flip_cmp_double(vu[i-1], ISNAN(REAL(v)[i-1])); break; // DONE: NA, NaN, -Inf and Inf
-        default :
-            error("Type '%s' not supported", type2char(TYPEOF(v))); 
-        }
-        if (b) return(ScalarLogical(FALSE));
-    }
-    return(ScalarLogical(TRUE));
-}
-*/
-
-// require(data.table)
-// set.seed(1L)
-// DT <- setDT(lapply(1:2, function(x) sample(c(-1e4:1e4), 1e8, TRUE)))
-// system.time(setkey(DT))
-
- // no NA/NaN implementation (Matthew's way using REAL(.) < REAL(.)')
-// system.time(data.table:::is.sorted(as.list(DT))[1L])
-//  user  system elapsed 
-// 0.830   0.001   0.850 
-// system.time(data.table:::is.sorted(as.list(DT)))
-//  user  system elapsed 
-// 0.826   0.002   0.828 
-
-// with unsigned long long implementation:
-// system.time(data.table:::is.sorted(as.list(DT))[1L])
-//  user  system elapsed 
-// 1.168   0.002   1.172 
-// system.time(data.table:::is.sorted(as.list(DT)))
-//  user  system elapsed 
-// 1.173   0.002   1.187 
-
-// conclusion: about .33 sec checking NA/NaN/-Inf/Inf! Not bad, I suppose? Can we make it quicker?
-// Note that this is on 1e8. On 1e7 size, this doesn't matter at all as the time to check is 0.07 sec.
-
-
-
